@@ -1,5 +1,6 @@
 #!/usr/bin/env python
 
+from decimal import Decimal
 import unittest2 as unittest
 
 import journalism
@@ -76,16 +77,16 @@ class TestColumns(unittest.TestCase):
 
     def test_map_change_type(self):
         def f(x):
-            return x + 1.1 if x is not None else x
+            return Decimal(x + 1.1) if x is not None else x
 
-        new_table = self.table.columns['one'].map(f, journalism.FloatColumn) 
+        new_table = self.table.columns['one'].map(f, journalism.DecimalColumn) 
 
         self.assertIsNot(new_table, self.table)
         self.assertEqual(self.table._column_types, [journalism.IntColumn, journalism.IntColumn, journalism.TextColumn])
         self.assertEqual(self.table.columns['one'], [1, 2, None])
         self.assertEqual(self.table.rows[0], [1, 2, 'a'])
 
-        self.assertEqual(new_table._column_types, [journalism.FloatColumn, journalism.IntColumn, journalism.TextColumn])
+        self.assertEqual(new_table._column_types, [journalism.DecimalColumn, journalism.IntColumn, journalism.TextColumn])
         self.assertEqual(new_table.columns['one'], [2.1, 3.1, None])
         self.assertEqual(new_table.rows[0], [2.1, 2, 'a'])
 
@@ -202,30 +203,31 @@ class TestIntColumn(unittest.TestCase):
         # TODO
         pass
 
-class TestFloatColumn(unittest.TestCase):
+class TestDecimalColumn(unittest.TestCase):
     def setUp(self):
         self.rows = [
-            [1.1, 2.19, 'a'],
-            [2.7, 3.42, 'b'],
-            [None, 4.1, 'c'],
-            [2.7, 3.42, 'c']
+            [Decimal('1.1'), Decimal('2.19'), 'a'],
+            [Decimal('2.7'), Decimal('3.42'), 'b'],
+            [None, Decimal('4.1'), 'c'],
+            [Decimal('2.7'), Decimal('3.42'), 'c']
         ]
         self.column_names = ['one', 'two', 'three']
-        self.column_types = [journalism.FloatColumn, journalism.FloatColumn, journalism.TextColumn]
+        self.column_types = [journalism.DecimalColumn, journalism.DecimalColumn, journalism.TextColumn]
 
         self.table = journalism.Table(self.rows, self.column_types, self.column_names)
 
     def test_validate(self):
-        column = journalism.FloatColumn(None, 'one')
-        column._data = lambda: [1.0, 2.1, 3.3]
+        column = journalism.DecimalColumn(None, 'one')
+        column._data = lambda: [Decimal('1.0'), Decimal('2.1'), Decimal('3.3')]
         column.validate()
 
-        column._data = lambda: [1.0, 'a', 3.3]
+        column._data = lambda: [Decimal('1.0'), 'a', Decimal('3.3')]
 
         with self.assertRaises(journalism.ColumnValidationError):
             column.validate()
 
-        column._data = lambda: [1, 'a', 3.3]
+        # Floats, not decimals
+        column._data = lambda: [1.0, 2.1, 3.3]
 
         with self.assertRaises(journalism.ColumnValidationError):
             column.validate()
@@ -235,35 +237,35 @@ class TestFloatColumn(unittest.TestCase):
         pass
 
     def test_sum(self):
-        self.assertEqual(self.table.columns['one'].sum(), 6.5)
-        self.assertEqual(self.table.columns['two'].sum(), 13.13)
+        print list(self.table.columns['one'])
+        self.assertEqual(self.table.columns['one'].sum(), Decimal('6.5'))
+        self.assertEqual(self.table.columns['two'].sum(), Decimal('13.13'))
 
     def test_min(self):
-        self.assertEqual(self.table.columns['one'].min(), 1.1)
-        self.assertEqual(self.table.columns['two'].min(), 2.19)
+        self.assertEqual(self.table.columns['one'].min(), Decimal('1.1'))
+        self.assertEqual(self.table.columns['two'].min(), Decimal('2.19'))
 
     def test_max(self):
-        self.assertEqual(self.table.columns['one'].max(), 2.7)
-        self.assertEqual(self.table.columns['two'].max(), 4.1)
+        self.assertEqual(self.table.columns['one'].max(), Decimal('2.7'))
+        self.assertEqual(self.table.columns['two'].max(), Decimal('4.1'))
 
     def test_median(self):
         with self.assertRaises(journalism.exceptions.NullComputationError):
             self.table.columns['one'].median()
 
-        self.assertEqual(self.table.columns['two'].median(), 3.42)
+        self.assertEqual(self.table.columns['two'].median(), Decimal('3.42'))
 
     def test_mode(self):
         with self.assertRaises(journalism.exceptions.NullComputationError):
             self.table.columns['one'].mode()
 
-        self.assertEqual(self.table.columns['two'].mode(), 3.42)
+        self.assertEqual(self.table.columns['two'].mode(), Decimal('3.42'))
 
     def test_variance(self):
-        # TODO add below code once decimals are fixed
-        # with self.assertRaises(journalism.exceptions.NullComputationError):
-        #     self.table.columns['one'].variance()
-        # self.assertEqual(self.table.columns['two'].variance(),0.47)
-        pass
+        with self.assertRaises(journalism.exceptions.NullComputationError):
+            self.table.columns['one'].variance()
+        
+        self.assertEqual(self.table.columns['two'].variance().quantize(Decimal('0.01')), Decimal('0.47'))
 
     def test_stdev(self):
         # TODO
