@@ -1,6 +1,9 @@
 0.2.0
 -----
 
+* Precise DecimalColumn tests.
+* Use Decimal type everywhere internally.
+* FloatColumn converted to DecimalColumn. (#17)
 * Added Eric Sagara to AUTHORS. (#48)
 * NumberColumn.variance implemented. (#1)
 * Cookbook: loading a CSV. (#37)
